# succinct-filesystem

./: .gitmodules  CMakeLists.txt  Makefile  README.md
benchmarking/: benchmark.py  filesystem.py  workload.py
benchmarking/workloads/: append_small_1000.f  create_dirs_deep_100000.f  create_dirs_deep_20000.f  create_dirs_deep_250000.f  create_dirs_flat_100000.f  create_dirs_flat_20000.f  create_dirs_flat_250000.f  create_small_5000.f  delete_small_5000.f  dirops_deep_5000.f  dirops_flat_5000.f  fileserver_read_500.f  fileserver_read_5000.f  fileserver_rw_500.f  fileserver_rw_5000.f  open_close_5000.f  remove_dirs_deep_20000.f  remove_dirs_flat_20000.f  rread_1g.f  rwrite_1g.f  seqread_1g.f  seqwrite_1g.f  varmail_1000.f
gedacht_trash/inode/: inode.hpp  map_inode.cpp
src/: CMakeLists.txt  fuse.cpp
src/bitvector/: adaptive_bitvector.cpp  array_bitvector.cpp  bitvector.hpp  saskeli_bitvector.cpp  word_bitvector.cpp
src/block_device/: block_device.cpp  block_device.hpp
src/dynamic_bitvector/: dynamic_bitvector.hpp
src/flouds/: flouds.cpp  flouds.hpp
src/fsm/: file_system_manager.cpp  file_system_manager.hpp  stable_inode_manager.hpp
src/fsm/allocation/: allocation_manager.hpp  best_fit_allocation.cpp  extent_allocation.cpp
src/fsm/delta/: delta_stabilization.hpp
src/fsm/inode/: array_inode.cpp  hierarchy_inode.cpp  inode.hpp
src/name_sequence/: array_name_sequence.cpp  concatenated_name_sequence.cpp  hash_name_sequence.cpp  immer_name_sequence.cpp  map_name_sequence.cpp  name_sequence.hpp
src/serialization/: serializable.hpp
src/wavelet_tree/: two_bit_wavelet_tree.cpp  two_bit_wavelet_tree.hpp
tests/: CMakeLists.txt  test_allocation.cpp  test_bitvector.cpp  test_block_device.cpp  test_delta.cpp  test_delta_stabilization.cpp  test_flouds.cpp  test_fsm.cpp  test_inode.cpp  test_ipsum.cpp  test_lorem.cpp  test_name_sequence.cpp  test_wavelet_tree.cpp
